<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/request_ID"
        android:ems="10"
        android:id="@+id/button5"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:text="@string/request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:layout_weight="0.87"
        android:textStyle="normal|bold"
        android:textColor="@android:color/background_dark"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckedTextView
            android:text="@string/approve_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/approved_btn"
            android:checkMark="@android:drawable/btn_radio"
            android:checkMarkTint="@android:color/black"
            android:gravity="center"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:focusable="true"
            android:clickable="true"/>

        <CheckedTextView
            android:text="@string/rejected_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rejected_btn"
            android:checkMark="@android:drawable/btn_radio"
            android:checkMarkTint="@android:color/black"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:gravity="center"
            android:focusable="true"
            android:clickable="true"/>
</LinearLayout>

    <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="116dp"
        android:weightSum="1"
        android:paddingRight="50dp"
        android:layout_marginLeft="175dp"
        android:layout_marginTop="30dp">

        <Button
            android:text="@string/next_btn"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:elevation="0dp" />
    </LinearLayout>

</LinearLayout>
