<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/rejected_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rejected_btn"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="25dp">

        </ScrollView>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="433dp"
            android:weightSum="1">

            <TextView
                android:text="@string/reason_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reason_text"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:layout_gravity="left"
                android:textSize="16sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage"
                android:text="@string/reject_reason"
                android:ems="10"
                android:id="@+id/reject_reason"
                android:layout_weight="0.94" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="172dp">

                <Button
                    android:text="@string/goback_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/goback_btn"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="50dp"
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/confirm_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/confirm_btn"
                    android:layout_weight="1"
                    android:layout_marginLeft="70dp"
                    android:gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="50dp"
                    android:textAllCaps="false"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>