<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:text="@string/request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="33sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/black" />

    <Button
        android:text="@string/gopending"
        android:layout_width="108dp"
        android:layout_height="72dp"
        android:layout_marginTop="10dp"
        android:id="@+id/pending_btn"
        android:layout_marginRight="26dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:layout_weight="0.37"
        android:layout_marginTop="30dp"
        android:paddingLeft="20dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="50dp">

            <Button
                android:text="@string/berejected"
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:id="@+id/reject_btn"
                android:layout_marginTop="10dp"
                android:layout_gravity="right"
                android:gravity="right"
                android:layout_marginRight="50dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="1">

            <Button
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:id="@+id/approved_btn"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:gravity="left"
                android:layout_gravity="left"
                android:text="@string/beapproved"
                android:layout_marginLeft="30dp"
                android:paddingRight="20dp" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
